--- a/Ankur/budget-buddy.html
+++ b/Ankur/budget-buddy.html
@@ -60,14 +60,14 @@
 				<div id="history-container">
 					<h3>History - Total</h3>
 					<ul id="history-list">
-						<!-- <li class="plus">Cash <span>-$400</span><button class="delete-btn">x</button></li>
+						<li class="plus">Cash <span>-$400</span><button class="delete-btn">x</button></li>
 						<li class="minus">Cash <span>-$400</span><button class="delete-btn">x</button></li>
 						<li class="plus">item1 category price</li>
 						<li class="minus">item2 category price</li>
 						<li class="minus">item3 category price</li>
 						<li class="minus">item4 category price</li>
 						<li class="plus">item5 category price</li>
-						<li class="minus">item6 category price</li> -->
+						<li class="minus">item6 category price</li>
 
 						<!-- <li class="plus">Cash <span>-$400</span><button class="delete-btn">x</button></li> -->
 					</ul>
@@ -78,41 +78,41 @@
 				<div class="categories">
 					<h4>Income - <span id="inc-total">$000</span></h4>
 					<ul class="cat-list" id="inc-list">
-						<!-- <li>Movies - $ Money Spent</li>
 						<li>Movies - $ Money Spent</li>
-						<li>Movies - $ Money Spent</li> -->
+						<li>Movies - $ Money Spent</li>
+						<li>Movies - $ Money Spent</li>
 					</ul>
 				</div>
 				<div class="categories">
 					<h4>Entertainment - <span id="ent-total">$000</span></h4>
 					<ul class="cat-list" id="ent-list">
-						<!-- <li>Movies - $ Money Spent</li>
 						<li>Movies - $ Money Spent</li>
-						<li>Movies - $ Money Spent</li> -->
+						<li>Movies - $ Money Spent</li>
+						<li>Movies - $ Money Spent</li>
 					</ul>
 				</div>
 				<div class="categories">
 					<h4>Food - <span id="food-total">$000</span></h4>
 					<ul class="cat-list" id="food-list">
-						<!-- <li>Dinner - $ Money Spent</li>
 						<li>Dinner - $ Money Spent</li>
-						<li>Dinner - $ Money Spent</li> -->
+						<li>Dinner - $ Money Spent</li>
+						<li>Dinner - $ Money Spent</li>
 					</ul>
 				</div>
 				<div class="categories">
 					<h4>Clothing - <span id="clothing-total">$000</span></h4>
 					<ul class="cat-list" id="clothing-list">
-						<!-- <li>Shirts - $ Money Spent</li>
 						<li>Shirts - $ Money Spent</li>
-						<li>Shirts - $ Money Spent</li> -->
+						<li>Shirts - $ Money Spent</li>
+						<li>Shirts - $ Money Spent</li>
 					</ul>
 				</div>
 				<div class="categories">
 					<h4>Bills - <span id="bills-total">$000</span></h4>
 					<ul class="cat-list" id="bills-list">
-						<!-- <li>Cell Phone - $ Money Spent</li>
 						<li>Cell Phone - $ Money Spent</li>
-						<li>Cell Phone - $ Money Spent</li> -->
+						<li>Cell Phone - $ Money Spent</li>
+						<li>Cell Phone - $ Money Spent</li>
 					</ul>
 				</div>
 			</div>
